renamed tex to md scripts

--- a/portingToMarkdown/output/classesObjects1.tex
+++ b/portingToMarkdown/output/classesObjects1.tex
@@ -551,9 +551,8 @@ public class Client {
 At this stage, the memory state looks like,
 
 \vskip 0.5cm
-
-		
-
+<img src="./../fig/classesObjects1/classesObjects1-figure8.png" alt="Drawing" width = "400"/> 
+\vskip 0.5cm
 \newpage
 
 If we change the values of the instance variables as,
@@ -572,7 +571,7 @@ It now becomes,
 
 \vskip 0.5cm
 
-<img src="./../fig/classesObjects1/classesObjects1-figure8.png" alt="Drawing" width = "400"/> 
+<img src="./../fig/classesObjects1/classesObjects1-figure9.png" alt="Drawing" width = "400"/> 
 \vskip 0.5cm
 
 Finally, we can modify the items of the array as,
@@ -592,5 +591,5 @@ public class Client {
 \newpage
 This gives us,
 \vskip 0.5cm
-<img src="./../fig/classesObjects1/classesObjects1-figure9.png" alt="Drawing" width = "400"/> 
+<img src="./../fig/classesObjects1/classesObjects1-figure10.png" alt="Drawing" width = "400"/> 
 \input{comp125lectureFooter}
