--- a/workshops/recursion/data.tex
+++ b/workshops/recursion/data.tex
@@ -1,7 +1,7 @@
 \input{comp125workshopHeader}
 \section* {Learning outcomes}
 
-By the end of this session, you will have learnt about recursions. 
+By the end of this session, you will have learnt more about recursions. 
 
 %\begin{center}
 %\fbox{
@@ -20,10 +20,10 @@ By the end of this session, you will have learnt about recursions.
 Consider the following recursive function definition,
 
 \begin{lstlisting}
-int foo(int a) {
+public static int foo(int a) {
 	int result;
-	if(a == 2) {
-		result = 2;
+	if(a == 0) {
+		result = 0;
 	}
 	else {
  		result = a + foo(a / 2);
@@ -38,17 +38,20 @@ What is the value of variable \texttt{status} if the method call is,
 	int status = foo(8);
 \end{lstlisting}
 
-Also, draw a memory diagram explaining the variables for each method call and the interaction between methods.
+Provide a trace of the code.
 
 \begin{solution}
 \begin{verbatim}
 foo(8) = 8 + foo(4)
 foo(4) = 4 + foo(2)
-foo(2) = 2
+foo(2) = 2 + foo(1)
+foo(1) = 1 + foo(0)
 Therefore,
-foo(4) = 4 + 2 = 6
-foo(8) = 8 + 6 = 14
-status = 14
+foo(1) = 1 + 0 = 1
+foo(2) = 2 + 1 = 3
+foo(4) = 4 + 3 = 7
+foo(8) = 8 + 7 = 15
+status = 15
 \end{verbatim}
 \end{solution}
 
@@ -59,7 +62,7 @@ status = 14
 The following method attempts to compute the factorial of integer $n$. What is wrong with the method?
 
 \begin{lstlisting}
-int factorial(int n) {
+public static int factorial(int n) {
 	return n * factorial(n - 1);
 	if(n == 0)
 		return 0;
@@ -73,7 +76,7 @@ int factorial(int n) {
 \end{enumerate}
 
 \begin{lstlisting}
-int factorial(int n) {
+public static int factorial(int n) {
 	if(n <= 1)
 		return 1;
 	return n * factorial(n - 1);
@@ -105,32 +108,32 @@ foo(0) = 0 + foo(0)
 Consider the following recursive method definition,
 
 \begin{lstlisting}
-int foo(int a) {
+public static int bar(int a) {
 	if(a <= 0)
 		return 0;
 	if(a % 2 == 0)
-		return foo(a/2);
+		return bar(a/2);
 	else
-		return 1 + foo(a/2);
+		return 1 + bar(a/2);
 }
 \end{lstlisting}
 
 What is the value of variable \texttt{result} if the method call is,
 
 \begin{lstlisting}
-	int result = foo(59);
+	int result = bar(59);
 \end{lstlisting}
 
 \begin{solution}
 \begin{verbatim}
-foo(59) = 1 + foo(29)
-foo(29) = 1 + foo(14)
-foo(14) = foo(7)
-foo(7) = 1 + foo(3)
-foo(3) = 1 + foo(1)
-foo(1) = 1 + foo(0)
-foo(0) = 0
-Therefore, foo(59) = 5
+bar(59) = 1 + bar(29)
+bar(29) = 1 + bar(14)
+bar(14) = bar(7)
+bar(7) = 1 + bar(3)
+bar(3) = 1 + bar(1)
+bar(1) = 1 + bar(0)
+bar(0) = 0
+Therefore, bar(59) = 5
 \end{verbatim}
 \end{solution}
 
@@ -139,11 +142,18 @@ Therefore, foo(59) = 5
 \question  \textbf{Writing a recursive method} \vskip 0.5cm
 
 \begin{enumerate}
-  \item Write a recursive method, that when passed an integer, returns the number of even digits in that integer. Return 0 if the integer is 0.
+  \item Write a recursive method, that when passed an integer, returns the number of even digits in that integer. Return 0 if the integer is 0. Some input-output mappings:
+\begin{verbatim}
+  4729  -> 1
+  13579 -> 0
+  284   -> 3	
+\end{verbatim}
+
+\textbf{Tip}: \texttt{n\%10} gives the last digit of integer \texttt{n} and  \texttt{n/10} gives the the number with last digit removed.
 
 \begin{solution}
 \begin{lstlisting}
-int nEvenDigits(int n) {
+public static int nEvenDigits(int n) {
 	if(n == 0)
 		return 0;
 	if(n%2 == 0)
@@ -158,7 +168,7 @@ int nEvenDigits(int n) {
 
 \begin{solution}
 \begin{lstlisting}
-int sumSquares(int n) {
+public static int sumSquares(int n) {
 	if(n <= 0)
 		return 0;
 	return n*n + sumSquares(n - 1);
@@ -171,9 +181,11 @@ int sumSquares(int n) {
 \question  \textbf{Writing a recursive method dealing with text} \vskip 0.5cm
 Write a recursive method, that when passed a String, returns the number of digits in the String.
 
+\textbf{Tip}: expression to check if a character \texttt{ch} is a digit is \texttt{(ch >= `0` \&\& ch <= `9`)}
+
 \begin{solution}
 \begin{lstlisting}
-int nDigits(String s) {
+public static int nDigits(String s) {
 	if(s == null || s.length() == 0)
 		return 0;
 	if(s.charAt(0) >= '0' && s.charAt(0) <= '9')
@@ -188,10 +200,11 @@ int nDigits(String s) {
 How many calls are made to \texttt{gcd} if the original call is \texttt{gcd(30, 72}?
 
 \begin{lstlisting}
-int gcd(int a, int b) {
+public static int gcd(int a, int b) {
 	if(b == 0)
 		return a;
 	return gcd(b, a%b);
+}
 \end{lstlisting}
 
 \begin{solution}
@@ -240,7 +253,7 @@ The first three numbers of this sequence are 1, 2 and 3, and every subsequent nu
 
 \begin{solution}
 \begin{lstlisting}
-int tribonacci(int n) {
+public static int tribonacci(int n) {
 	if(n < 4)
 		return n;
 	return tribonacci(n - 1) + tribonacci(n - 2) + tribonacci(n - 3);
@@ -253,13 +266,13 @@ int tribonacci(int n) {
 How many calls are made to \texttt{tribonacci} if the original call is \texttt{tribonacci(5)}?
 
 \begin{solution}
-\begin{verbatim}
-t(5) = t(4) + t(3) + t(2)
-t(4) = t(3) + t(2) + (t1)
-t(3) called twice returns 3 each time
-t(2) called twice returns 2 each time
-t(1) called once returns 1
-So termination level calls are 5, and in addition t(4) and t(5) once each. 
+\begin{verbatim}tribonacci(
+tribonacci(5) = tribonacci(4) + tribonacci(3) + tribonacci(2)
+tribonacci(4) = tribonacci(3) + tribonacci(2) + (t1)
+tribonacci(3) called twice returns 3 each time
+tribonacci(2) called twice returns 2 each time
+tribonacci(1) called once returns 1
+So termination level calls are 5, and in addition tribonacci(4) and tribonacci(5) once each. 
 So a total of 7 method calls.
 \end{verbatim}
 \end{solution}
