--- a/workshops/recursion/workshop_recursion.tex
+++ b/workshops/recursion/workshop_recursion.tex
@@ -3,7 +3,7 @@
 \input{comp125workshopHeader}
 \section* {Learning outcomes}
 
-By the end of this session, you will have learnt about recursions. 
+By the end of this session, you will have learnt more about recursions. 
 
 %\begin{center}
 %\fbox{
@@ -24,8 +24,8 @@ Consider the following recursive function definition,
 \begin{lstlisting}
 int foo(int a) {
 	int result;
-	if(a == 2) {
-		result = 2;
+	if(a == 0) {
+		result = 0;
 	}
 	else {
  		result = a + foo(a / 2);
@@ -40,17 +40,20 @@ What is the value of variable \texttt{status} if the method call is,
 	int status = foo(8);
 \end{lstlisting}
 
-Also, draw a memory diagram explaining the variables for each method call and the interaction between methods.
+Provide a trace of the code.
 
 \begin{solution}
 \begin{verbatim}
 foo(8) = 8 + foo(4)
 foo(4) = 4 + foo(2)
-foo(2) = 2
+foo(2) = 2 + foo(1)
+foo(1) = 1 + foo(0)
 Therefore,
-foo(4) = 4 + 2 = 6
-foo(8) = 8 + 6 = 14
-status = 14
+foo(1) = 1 + 0 = 1
+foo(2) = 2 + 1 = 3
+foo(4) = 4 + 3 = 7
+foo(8) = 8 + 7 = 15
+status = 15
 \end{verbatim}
 \end{solution}
 
@@ -141,7 +144,14 @@ Therefore, foo(59) = 5
 \question  \textbf{Writing a recursive method} \vskip 0.5cm
 
 \begin{enumerate}
-  \item Write a recursive method, that when passed an integer, returns the number of even digits in that integer. Return 0 if the integer is 0.
+  \item Write a recursive method, that when passed an integer, returns the number of even digits in that integer. Return 0 if the integer is 0. Some input-output mappings:
+\begin{verbatim}
+  4729  -> 1
+  13579 -> 0
+  284   -> 3	
+\end{verbatim}
+
+\textbf{Tip}: \texttt{n\%10} gives the last digit of integer \texttt{n} and  \texttt{n/10} gives the the number with last digit removed.
 
 \begin{solution}
 \begin{lstlisting}
@@ -172,6 +182,8 @@ int sumSquares(int n) {
 
 \question  \textbf{Writing a recursive method dealing with text} \vskip 0.5cm
 Write a recursive method, that when passed a String, returns the number of digits in the String.
+
+\textbf{Tip}: expression to check if a character \texttt{ch} is a digit is \texttt{(ch >= `0` \&\& ch <= `9`)}
 
 \begin{solution}
 \begin{lstlisting}
