recursion before searching

--- a/workshops/introduction/workshop_intro_solutions.tex
+++ b/workshops/introduction/workshop_intro_solutions.tex
@@ -25,7 +25,7 @@ Once you login to the computer, make sure you have access to COMP125 homepage in
 
 \section*{COMP115/ WCOM115 Revision}
 
-\question What is the value of \texttt{result} when the following code is executed?
+\question 	
 \begin{lstlisting}
 int result = 12/5;
 \end{lstlisting}
